--- a/games/index.html
+++ b/games/index.html
@@ -20,7 +20,7 @@
                 </div>
         
         </div>
-        <h1>Here are our games!</h1>
+        <h1>Here are our gams!</h1>
 
 
 </body>
