--- a/games/index.html
+++ b/games/index.html
@@ -21,7 +21,7 @@
         
         </div>
         <h1>Here are our games!</h1>
-        <li><a class="pagelink" href="tap_or_resign"</li>
+        <li><a class="pagelink" href="tap_or_resign"></a></li>
 
 
 </body>
