--- a/games/index.html
+++ b/games/index.html
@@ -4,7 +4,7 @@
         <meta charset='utf-8'>
         <title>RH Dynamics</title>
         <link rel='stylesheet' type='text/css' href='../style.css'>
-        <link rel='shortcut icon' type='image/x-icon' href='../images/rhlogo.ico'/>
+        <link rel='shortcut icon' type='image/x-icon' href='../images/logo.ico'/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
     </head>
@@ -21,7 +21,8 @@
         
         </div>
         <h1>Here are our games!</h1>
-        <li><a class="pagelink" href="tap_or_resign"></a></li>
+        <li><a class="pagelink" href="tap_or_resign" >Tap or Resign (on developpement)</a></li>
+        <li><a class="pagelink" href="https://remidv.itch.io" >Others (Itch.io)</a></li>
 
 
 </body>
