--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,7 @@
         <meta charset='utf-8'>
         <title>RH Dynamics</title>
         <link rel='stylesheet' type='text/css' href='../style.css'>
-        <link rel='shortcut icon' type='image/x-icon' href='../images/rhlogo.ico'/>
+        <link rel='shortcut icon' type='image/x-icon' href='../images/logo.ico'/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
     </head>
