--- a/about/index.html
+++ b/about/index.html
@@ -26,6 +26,12 @@
             <h3>
                 Remi DV
             </h3>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur doloremque ipsum, ea, rerum, accusamus assumenda nihil ratione 
+            et exercitationem magni repudiandae. Excepturi in pariatur ipsum minima tenetur. Aperiam exercitationem doloremque porro libero architecto aspernatur blanditiis!
+            <h3>
+                Henry_tkr
+            </h3>
+            Magni repudiandae. Excepturi in pariatur ipsum minima tenetur. Aperiam exercitationem doloremque porro libero architecto aspernatur blanditiis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, eligendi!
             
         </div>
         <h2>What are we Doing?</h2>
