--- a/contact/index.html
+++ b/contact/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
     </head>
-    <body style="overflow: hidden;">
+    <body>
         <div class="bande">
                 <button class="home" href="#" onclick="window.location.href='../home';">home</button>
                 <button class="aboutus" href="#" onclick="window.location.href='../about';" >about us</button>
