--- a/home/index.html
+++ b/home/index.html
@@ -25,5 +25,5 @@
         <div class="title" id="title"></div>
 </body>
     <script src='../js/home.js' id="reload"></script>
-    <script src='../js/script.js' id="reload"></script>
+    <script src='../js/script.js'></script>
 </html>
