--- a/contact/index.html
+++ b/contact/index.html
@@ -20,7 +20,10 @@
                 </div>
         
         </div>
-        
+        <h1>
+            Contact Us!
+        </h1>
+        <div class="ans">you can contact us</div>
 
 
 </body>
