--- a/about/index.html
+++ b/about/index.html
@@ -26,8 +26,8 @@
             <h3>
                 Remi DV
             </h3>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur doloremque ipsum, ea, rerum, accusamus assumenda nihil ratione 
-            et exercitationem magni repudiandae. Excepturi in pariatur ipsum minima tenetur. Aperiam exercitationem doloremque porro libero architecto aspernatur blanditiis!
+            <img href="../images/logo.png">
+            Remi is the one who makes the code of our games. He has has a <a class="pagelink" href="https://www.github.com/Remi-Dv">Github</a>
             <h3>
                 Henry_tkr
             </h3>
