--- a/about/index.html
+++ b/about/index.html
@@ -24,12 +24,12 @@
         <div class="ans">
             We are two young men who do their best to give you video games and some programms. We are Remi and Henry ( and yes remi doesn't do all the work )
             <h3>
-                Remi DV
+                Remi DV <img src="../images/pdpremi.png" class="pdp" id="remip">
             </h3>
-            <img href="../images/logo.png">
-            Remi is the one who makes the code of our games. He has has a <a class="pagelink" href="https://www.github.com/Remi-Dv">Github</a>
+            
+            Remi is the one who makes the code of our games. He has has a <a class="pagelink" href="https://www.github.com/Remi-Dv">Github</a>. Yes Yes Yes skidibibam bam boom bom yes yes
             <h3>
-                Henry_tkr
+                Henry_tkr <img src="../images/pdphenry.png" class="pdp" id="henryp">
             </h3>
             Magni repudiandae. Excepturi in pariatur ipsum minima tenetur. Aperiam exercitationem doloremque porro libero architecto aspernatur blanditiis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, eligendi!
             
