--- a/about/index.html
+++ b/about/index.html
@@ -22,16 +22,19 @@
         </div>
         <h1>Who are We?</h1>
         <div class="ans">
-            We are two young men who do their best to give you video games and some programms. We are Remi and Henry ( and yes remi doesn't do all the work )
+            We are two young men who do their best to give you video games and some programms. We are Remi and Henry ( and yes remi doesn't do all the work ).
             <h3>
-                Remi DV <img src="../images/pdpremi.png" class="pdp" id="remip">
+                <img src="../images/pdpremi.png" class="pdp" id="remip"> Remi DV
             </h3>
             
-            Remi is the one who makes the code of our games. He has has a <a class="pagelink" href="https://www.github.com/Remi-Dv">Github</a>. Yes Yes Yes skidibibam bam boom bom yes yes
+            Remi is the one who makes the code of our games. He has has a <a class="pagelink" href="https://www.github.com/Remi-Dv">Github</a> and a 
+            <a class="pagelink" href="https://www.youtube.com/@RemiDv">Youtube</a> channel.
+            Yes Yes Yes skidibibam bam boom bom yes yes 2
             <h3>
-                Henry_tkr <img src="../images/pdphenry.png" class="pdp" id="henryp">
+                <img src="../images/pdphenry.png" class="pdp" id="henryp"> Henry_tkr
             </h3>
-            Magni repudiandae. Excepturi in pariatur ipsum minima tenetur. Aperiam exercitationem doloremque porro libero architecto aspernatur blanditiis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, eligendi!
+            Henry makes all game design, game assets, most of video editing, and made Remi's chibis. He likes pankakes and has an 
+            <a class="pagelink" href="https://instagram.com/henry_tkr">instagram</a> and a <a class="pagelink" href="https://www.github.com/Rh-Henry">Github</a>.
             
         </div>
         <h2>What are we Doing?</h2>
