--- a/about/index.html
+++ b/about/index.html
@@ -24,17 +24,14 @@
         <div class="ans">
             We are two young men who do their best to give you video games and some programms. We are Remi and Henry ( and yes remi doesn't do all the work ).
             <h3>
-                <img src="../images/pdpremi.png" class="pdp" id="remip"> Remi DV
+                <img src="../images/pdpremi.png" class="pdp" id="remip"> RemiDv
             </h3>
-            
-            Remi is the one who makes the code of our games. He has has a <a class="pagelink" href="https://www.github.com/Remi-Dv">Github</a> and a 
-            <a class="pagelink" href="https://www.youtube.com/@RemiDv">Youtube</a> channel.
-            Yes Yes Yes skidibibam bam boom bom yes yes 2
+            Hey, I am RemiDv, I like programming especially video games. I create videos on my <a class="pagelink" href="https://www.youtube.com/@RemiDv">Youtube channel</a>. You can check the code of almost every project on my <a class="pagelink" href="https://www.github.com/Remi-Dv">Github profile</a>
             <h3>
                 <img src="../images/pdphenry.png" class="pdp" id="henryp"> Henry_tkr
             </h3>
-            Henry makes all game design, game assets, most of video editing, and made Remi's chibis. He likes pankakes and has an 
-            <a class="pagelink" href="https://instagram.com/henry_tkr">instagram</a> and a <a class="pagelink" href="https://www.github.com/Rh-Henry">Github</a>.
+            Hey! I make all game design, game assets, most of video editing, and I made Remi's chibis. I like pankakes and I think it's hard to be Remi's teamate. Here is my
+            <a class="pagelink" href="https://instagram.com/henry_tkr">Instagram</a> and I also have a <a class="pagelink" href="https://www.github.com/Rh-Henry">Github</a> for some projects.
             
         </div>
         <h2>What are we Doing?</h2>
@@ -45,6 +42,7 @@
                 and you will be able to play them. We will publish mobile games on Play Store and maybe Apple Store.
             </p>
         </div>
+        <div class="end"></div>
 
 
 </body>
