--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,8 @@
             <h3>
                 <img src="../images/pdpremi.png" class="pdp" id="remip"> RemiDv
             </h3>
-            Hey, I am RemiDv, I like programming especially video games. I create videos on my <a class="pagelink" href="https://www.youtube.com/@RemiDv">Youtube channel</a>. You can check the code of almost every project on my <a class="pagelink" href="https://www.github.com/Remi-Dv">Github profile</a>
+            Hey, I am RemiDv, I like programming especially video games. I create videos on my <a class="pagelink" href="https://www.youtube.com/@RemiDv">Youtube channel</a>.
+             You can check the code of almost every project on my <a class="pagelink" href="https://www.github.com/Remi-Dv">Github profile</a>
             <h3>
                 <img src="../images/pdphenry.png" class="pdp" id="henryp"> Henry_tkr
             </h3>
